--- a/hp/poc-detect-pure-violation/genindex.html
+++ b/hp/poc-detect-pure-violation/genindex.html
@@ -2177,10 +2177,10 @@
 </li>
       <li><a href="autoapi/gstaichi/profiler/kernel_profiler/index.html#gstaichi.profiler.kernel_profiler.print_kernel_profiler_info">print_kernel_profiler_info() (in module gstaichi.profiler.kernel_profiler)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/profiler/memory_profiler/index.html#gstaichi.profiler.memory_profiler.print_memory_profiler_info">print_memory_profiler_info() (in module gstaichi.profiler.memory_profiler)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/profiler/scoped_profiler/index.html#gstaichi.profiler.scoped_profiler.print_scoped_profiler_info">print_scoped_profiler_info() (in module gstaichi.profiler.scoped_profiler)</a>
 </li>
       <li><a href="autoapi/gstaichi/linalg/sparse_matrix/index.html#gstaichi.linalg.sparse_matrix.SparseMatrixBuilder.print_triplets">print_triplets() (gstaichi.linalg.sparse_matrix.SparseMatrixBuilder method)</a>
@@ -2203,6 +2203,10 @@
         <li><a href="autoapi/gstaichi/lang/snode/index.html#gstaichi.lang.snode.SNode.ptr">(gstaichi.lang.snode.SNode attribute)</a>
 </li>
       </ul></li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.pure_violations">pure_violations (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext attribute)</a>
+</li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.PureViolation">PureViolation (class in gstaichi.lang.ast.ast_transformer_utils)</a>
+</li>
       <li><a href="autoapi/gstaichi/lang/shell/index.html#gstaichi.lang.shell.pybuf_enabled">pybuf_enabled (in module gstaichi.lang.shell)</a>, <a href="autoapi/gstaichi/lang/shell/index.html#id0">[1]</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/kernel_impl/index.html#gstaichi.lang.kernel_impl.pyfunc">pyfunc() (in module gstaichi.lang.kernel_impl)</a>
@@ -2669,6 +2673,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/gstaichi/profiler/kernel_metrics/index.html#gstaichi.profiler.kernel_metrics.CuptiMetric.val_format">val_format (gstaichi.profiler.kernel_metrics.CuptiMetric attribute)</a>
 </li>
+      <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.PureViolation.var_name">var_name (gstaichi.lang.ast.ast_transformer_utils.PureViolation attribute)</a>
+</li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext.variable_scope_guard">variable_scope_guard() (gstaichi.lang.ast.ast_transformer_utils.ASTTransformerContext method)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/ast/ast_transformer_utils/index.html#gstaichi.lang.ast.ast_transformer_utils.VariableScopeGuard">VariableScopeGuard (class in gstaichi.lang.ast.ast_transformer_utils)</a>
@@ -2683,10 +2689,10 @@
 </li>
       <li><a href="autoapi/gstaichi/math/mathimpl/index.html#gstaichi.math.mathimpl.vec4">vec4 (in module gstaichi.math.mathimpl)</a>
 </li>
-      <li><a href="autoapi/gstaichi/lang/matrix/index.html#gstaichi.lang.matrix.Vector">Vector (class in gstaichi.lang.matrix)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/gstaichi/lang/matrix/index.html#gstaichi.lang.matrix.Vector">Vector (class in gstaichi.lang.matrix)</a>
+</li>
       <li><a href="autoapi/gstaichi/types/compound_types/index.html#gstaichi.types.compound_types.vector">vector() (in module gstaichi.types.compound_types)</a>
 </li>
       <li><a href="autoapi/gstaichi/lang/matrix/index.html#gstaichi.lang.matrix.VectorNdarray">VectorNdarray (class in gstaichi.lang.matrix)</a>
