--- a/hp/poc-detect-pure-violation/_modules/gstaichi/lang/ast/ast_transformer.html
+++ b/hp/poc-detect-pure-violation/_modules/gstaichi/lang/ast/ast_transformer.html
@@ -1110,7 +1110,7 @@
                     <span class="n">violation</span> <span class="o">=</span> <span class="kc">True</span>
                     <span class="k">if</span> <span class="n">violation</span> <span class="ow">and</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">node</span><span class="o">.</span><span class="n">ptr</span><span class="p">,</span> <span class="n">enum</span><span class="o">.</span><span class="n">Enum</span><span class="p">):</span>
                         <span class="n">violation</span> <span class="o">=</span> <span class="kc">False</span>
-                    <span class="k">if</span> <span class="n">violation</span> <span class="ow">and</span> <span class="n">node</span><span class="o">.</span><span class="n">value</span><span class="o">.</span><span class="n">ptr</span> <span class="ow">in</span> <span class="p">[</span><span class="n">ti_math</span><span class="p">,</span> <span class="n">math</span><span class="p">]:</span>
+                    <span class="k">if</span> <span class="n">violation</span> <span class="ow">and</span> <span class="n">node</span><span class="o">.</span><span class="n">value</span><span class="o">.</span><span class="n">ptr</span> <span class="ow">in</span> <span class="p">[</span><span class="n">ti_math</span><span class="p">,</span> <span class="n">math</span><span class="p">,</span> <span class="n">np</span><span class="p">]:</span>
                         <span class="c1"># ignore this built-in module</span>
                         <span class="n">violation</span> <span class="o">=</span> <span class="kc">False</span>
                     <span class="k">if</span> <span class="n">violation</span><span class="p">:</span>
